--- a/templates/base.html
+++ b/templates/base.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Noto+Sans+KR&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
-    <link rel="stylesheet" href="{% block stylesheet %}{ %endblock stylesheet %}">
+    <link rel="stylesheet" href="{% block stylesheet %}{% endblock stylesheet %}">
     <title>
         {% block title %}
         {% endblock title %}
