--- a/blog/static/blog/css/article_list.css
+++ b/blog/static/blog/css/article_list.css
@@ -2,16 +2,15 @@
   width: 100%;
   min-height: 10rem;
   margin: 1rem 0;
-  border-radius: .8rem;
   background-color: #F7F7F7;
   color: #28104E;
+  border-radius: .8rem;
 }
 
 .article-card__title {
-  border-top-left-radius: .8rem;
-  border-top-right-radius: .8rem;
-  background-color: #d1d1d1;
-  color: #28104E;
+  border-radius: .8rem .8rem 0 0;
+  background-color: #2D2D44;
+  color: #DEACF5;
 }
 
 .article-card__title span {
@@ -31,14 +30,14 @@
   align-items: baseline;
 }
 
-.article-card__cta p {
-  font-size: 1.2rem;
-}
-
 .article-card__cta a {
   color: #28104E;
 }
 
 .article-card__cta a:hover {
   color: #5321a3;
+}
+
+.article-card__cta p {
+  font-size: 1.2rem;
 }
