--- a/blog/static/blog/scss/article_detail.scss
+++ b/blog/static/blog/scss/article_detail.scss
@@ -1,26 +1,35 @@
 @import '../../../../static/main/scss/utility';
 
-.article-card {
-    width: 100%;
-    min-height: 10rem;
-    margin: 1rem 0;
+.detail-card {
     @include background-text($card-color);
     border-radius: .8rem;
 
     @at-root #{&}__title {
-        @extend .article-card__body;
-        border-radius: .8rem .8rem 0 0;
+        display: -webkit-box;
+        display: flex;
+        -webkit-box-pack: start;
+                justify-content: flex-start;
+        -webkit-box-align: baseline;
+                align-items: baseline;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+                flex-flow: column;
+        @extend .detail-card__body;
         @include background-text($secondary-color);
+        border-radius: .8rem .8rem 0 0;
 
         span {
+            margin-left: auto;
             font-size: 1.2rem;
         }
     }
+
     @at-root #{&}__body {
         padding: 1rem 2rem;
     }
+
     @at-root #{&}__cta {
-        @extend .article-card__body;
+        @extend .detail-card__body;
         display: -webkit-box;
         display: flex;
         -webkit-box-pack: justify;
@@ -30,6 +39,7 @@
 
         a {
             color: change-color($card-color);
+            
             &:hover {
                 color: lighten(change-color($card-color), 20);
             }
