--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,7 @@
 <div class="header-container" role="navigation">
     <nav>
         <div class="nav__brand">
-            <h3>Personal Blog</h3>
+            <h3><a href="{% url 'blog:articles' %}">Personal Blog</a></h3>
         </div>
     </nav>
 </div>
