Add login and logout views and pages
Added login_user and logout_user views to accounts app.
Made the necessary changes to the corresponding templates.
(Pending) Error handling in register and login pages.

--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -11,8 +11,11 @@ Sign up
 {% endblock title %}
 
 {% block content %}
+<div class="main-container">
     <form action="" method="POST">
+    {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Sign up">
     </form>
+</div>
 {% endblock content %}
