Add error handling to all the forms
Added error handling to login and register forms.
Put restrictions on annonymous users from accessing homepage.
Put restrictions on logged users from accessing login and register forms.
(Pending) Styling the login and register forms

--- a/static/main/scss/_mixins.scss
+++ b/static/main/scss/_mixins.scss
@@ -13,6 +13,11 @@
     color: change-color($color);
 }
 
+@mixin message-color($color) {
+    border-color: $color;
+    color: $color
+}
+
 // Functions
 @function change-color($color) {
     @if (lightness($color) > 40) {
