--- a/static/main/scss/_variables.scss
+++ b/static/main/scss/_variables.scss
@@ -5,5 +5,10 @@ $card-color: #F7F7F7;
 $light-text-color: #DEACF5;
 $dark-text-color: #28104E;
 
+$info-color: #17A8C5;
+$success-color: #28A745;
+$warning-color: #FFCA07;
+$error-color: #DC3545;
+
 $heading-font : 'Cormorant Garamond', serif;
 $content-font: 'Noto Sans KR', sans-serif;
