--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
         </header>
 
         <main role="main">
+            {% include 'messages.html' %}
         
             {% block content %}
             {% endblock content %}
