--- a/static/main/css/main.css
+++ b/static/main/css/main.css
@@ -98,3 +98,40 @@ nav {
 .footer-container h4 {
   font-family: "Cormorant Garamond", serif;
 }
+
+.message-container {
+  margin: 1rem;
+}
+
+.message {
+  max-width: 100%;
+  padding: 1rem;
+  border: .1rem solid;
+  border-radius: .8rem;
+  font-size: 1.2rem;
+}
+
+.message--info {
+  border-color: #17A8C5;
+  color: #17A8C5;
+}
+
+.message--success {
+  border-color: #28A745;
+  color: #28A745;
+}
+
+.message--warning {
+  border-color: #FFCA07;
+  color: #FFCA07;
+}
+
+.message--error {
+  border-color: #DC3545;
+  color: #DC3545;
+}
+
+.field-errors {
+  padding: 0 1rem;
+  list-style-type: disc;
+}
