--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -12,10 +12,20 @@ Login
 
 {% block content %}
 <div class="main-container">
-    <form action="" method="POST">
-    {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Log in">
-    </form>
+    <h1 class="heading--center">
+        Login
+    </h1>
+    <div class="login-form-container">
+        <form action="" method="POST">
+        {% csrf_token %}
+            {% for field in form %}
+                <p class="form__input">
+                    {{ field.label }}
+                    {{ field }}
+                </p>
+            {% endfor %}
+            <button class="form__input--submit">Log in</button>
+        </form>
+    </div>
 </div>
 {% endblock content %}
