--- a/templates/header.html
+++ b/templates/header.html
@@ -5,7 +5,8 @@
         </div>
         {% if request.user.is_authenticated %}
             <div class="nav__dashboard">
-                <span>Welcome, {{ request.user }}</span>
+                <a href="{% url 'blog:create_article' %}">New article</a>
+                <a href="{% url 'blog:user_profile' request.user.id %}">Your profile</a>
                 <a href="{% url 'accounts:logout' %}">Logout</a>
             </div>
         {% else %}
