--- a/static/main/css/main.css
+++ b/static/main/css/main.css
@@ -23,6 +23,10 @@ a {
   color: #DEACF5;
 }
 
+a:hover {
+  text-decoration: underline;
+}
+
 body {
   max-width: 100vw;
   height: 100vh;
@@ -77,8 +81,7 @@ nav {
   font-size: 1.4rem;
 }
 
-.nav__dashboard span:first-child,
-.nav__dashboard a:first-child {
+.nav__dashboard a:not(last-child) {
   margin-right: 1rem;
 }
 
