--- a/static/main/scss/_resets.scss
+++ b/static/main/scss/_resets.scss
@@ -22,4 +22,8 @@ ul {
 a {
     text-decoration: none;
     color: change-color($primary-color);
+
+    &:hover {
+        text-decoration: underline;
+    }
 }
