--- a/blog/templates/blog/user_profile.html
+++ b/blog/templates/blog/user_profile.html
@@ -27,7 +27,7 @@
             <button class="form__input--submit">Update settings</button>
         </form>
         <p class="extra-links">To change your password, <a href="#">click here</a>.</p>
-        <p class="extra-links">To manage your articles, <a href="{% url 'blog:user_articles' request.user.id %}">click here</a>.</p>
+        <p class="extra-links">To manage your articles, <a href="{% url 'blog:user_articles' %}">click here</a>.</p>
     </div>
 
 </div>
