--- a/blog/static/blog/scss/update_user_article.scss
+++ b/blog/static/blog/scss/update_user_article.scss
@@ -1,6 +1,12 @@
 @import './../../../../static/main/scss/utility';
 
-.create-form-container {
+.heading--center {
+    font-family: $heading-font;
+    padding-bottom: 1rem;
+    text-align: center;
+}
+
+.update-form-container {
     width: 80%;
     padding: 2rem;
     margin: auto;
