--- a/blog/templates/blog/update_user_article.html
+++ b/blog/templates/blog/update_user_article.html
@@ -14,6 +14,9 @@ Update {{ article.article_title | truncatewords:4 }}
 <div class="main-container">
 
     <div class="update-form-container" role="form">
+        <p class="link--back">
+            <a href="{% url 'blog:user_articles' %}">Go back</a>
+        </p>
         <h1 class="heading--center">Update article</h1>
 
         <form action="" method="POST">
